if (XE_DEV_UNIT_TEST)
    add_subdirectory(googletest)
endif()

if (XE_DEV_BENCHMARK_TEST)
    # set(BENCHMARK_DOWNLOAD_DEPENDENCIES ON CACHE BOOL "")
    # set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "")
    # set(BENCHMARK_USE_BUNDLED_GTEST OFF CACHE BOOL "")
    # set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "")
    # set(BENCHMARK_ENABLE_WERROR OFF CACHE BOOL "")
    # set(BENCHMARK_FORCE_WERROR OFF CACHE BOOL "")

    set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "")
    set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "")
    add_subdirectory(benchmark)
endif()
